[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI/OptionsMenu/ColorItemUI.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/Themes/MainTheme.tres" type="Theme" id=2]
[ext_resource path="res://UI/OptionsMenu/OptionsMenu.gd" type="Script" id=3]
[ext_resource path="res://UI/OptionsMenu/HatItemUI.tscn" type="PackedScene" id=4]
[ext_resource path="res://UI/Scripts/ListControl.gd" type="Script" id=5]

[node name="OptionsMenu" type="Control"]
anchor_right = 1.0
margin_bottom = 175.0
theme = ExtResource( 2 )
script = ExtResource( 3 )
ColorMenu = NodePath("TabContainer/Colors/ColorMenu")
HatMenu = NodePath("TabContainer/Hats/HatMenu")
MaskMenu = NodePath("TabContainer/Masks/MaskMenu")

[node name="TabContainer" type="TabContainer" parent="."]
anchor_right = 1.0
margin_top = 12.0
margin_bottom = 187.0
tab_align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Colors" type="Tabs" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 48.0
margin_right = -4.0
margin_bottom = -4.0
tab_align = 0

[node name="ColorMenu" type="HBoxContainer" parent="TabContainer/Colors"]
anchor_right = 1.0
margin_left = 12.0
margin_top = 12.0
margin_right = -12.0
margin_bottom = 92.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
ItemUI = ExtResource( 1 )
num_preview_items = 3

[node name="Hats" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 48.0
margin_right = -4.0
margin_bottom = -4.0

[node name="HatMenu" type="HBoxContainer" parent="TabContainer/Hats"]
anchor_right = 1.0
margin_left = 12.0
margin_top = 12.0
margin_right = -12.0
margin_bottom = 104.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
ItemUI = ExtResource( 4 )
num_preview_items = 3

[node name="Masks" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 48.0
margin_right = -4.0
margin_bottom = -4.0

[node name="MaskMenu" type="HBoxContainer" parent="TabContainer/Masks"]
margin_left = 12.0
margin_top = 12.0
margin_right = 584.0
margin_bottom = 104.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
ItemUI = ExtResource( 4 )
num_preview_items = 3
